--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="button">#57886C</color>
     <color name="text">#D5C7BC</color>
     <color name="highlight">#3F7D20</color>
+    <color name="button_red">#ff0000</color>
 </resources>
